[TS-3520]: Fix logging core dump due to invalid unmapped url length/buffer