proxy/logging/LogAccessHttp.cc
@@ -419,7 +419,7 @@ LogAccessHttp::marshal_client_req_unmapped_url_canon(char *buf)
   int len = INK_MIN_ALIGN;
 
   validate_unmapped_url();
-  if (0 == m_client_req_unmapped_url_canon_len) {
+  if (0 >= m_client_req_unmapped_url_canon_len) {
     // If the unmapped URL isn't populated, we'll fall back to the original
     // client URL. This helps for example server intercepts to continue to
     // log the requests, even when there is no remap rule for it.
@@ -445,7 +445,7 @@ LogAccessHttp::marshal_client_req_unmapped_url_path(char *buf)
   validate_unmapped_url();
   validate_unmapped_url_path();
 
-  if (0 == m_client_req_unmapped_url_path_len) {
+  if (0 >= m_client_req_unmapped_url_path_len) {
     len = marshal_client_req_url_path(buf);
   } else {
     len = round_strlen(m_client_req_unmapped_url_path_len + 1); // +1 for eos
